--- a/app/src/main/res/layout/list_item_assigned_mater_list_deadline.xml
+++ b/app/src/main/res/layout/list_item_assigned_mater_list_deadline.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:textColor="@color/secondary_text"
+            android:textColor="@color/warning"
             android:layout_marginTop="8dp"
             android:id="@+id/textView"
             android:text="主题"
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="14sp"
-            android:textColor="@color/secondary_text"
+            android:textColor="@color/warning"
             android:layout_marginTop="8dp"
             android:id="@+id/textView2"
             android:text="交办人："
