--- a/app/src/main/res/layout/activity_pzdetail.xml
+++ b/app/src/main/res/layout/activity_pzdetail.xml
@@ -67,7 +67,88 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_margin="24dp">
+                    android:layout_margin="16dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:minWidth="130dp"
+                            android:layout_height="@dimen/cell_height"
+                            android:gravity="center_vertical"
+                            android:textSize="20sp"
+                            android:textColor="@color/primary_text"
+                            android:text="施工时间:"
+                            />
+
+                        <EditText
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical"
+                            android:focusable="false"
+                            android:id="@+id/edit_text_construction"
+                            android:hint="请输入施工时间"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:minWidth="130dp"
+                            android:layout_height="@dimen/cell_height"
+                            android:gravity="center_vertical"
+                            android:textSize="20sp"
+                            android:textColor="@color/primary_text"
+                            android:text="旁站开始时间:"
+                            />
+
+                        <EditText
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical"
+                            android:focusable="false"
+                            android:id="@+id/edit_text_pz_start"
+                            android:hint="请输入开始时间"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:minWidth="130dp"
+                            android:layout_height="@dimen/cell_height"
+                            android:gravity="center_vertical"
+                            android:textSize="20sp"
+                            android:textColor="@color/primary_text"
+                            android:text="旁站结束时间:"
+                            />
+
+                        <EditText
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical"
+                            android:focusable="false"
+                            android:id="@+id/edit_text_pz_end"
+                            android:hint="请输入结束时间"/>
+
+                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
