--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="divider">#BDBDBD</color>
     <color name="warning">#f13e35</color>
     <color name="orange">#FFA500</color>
+    <color name="white_bg">#FFFFFF</color>
+    <color name="clear_color">#00000000</color>
 
     <color name="tab_item_selected">#79a973</color>
     <color name="tab_item_unselected">#9ea69e</color>
