--- a/app/src/main/res/layout/activity_supervision_patrol_normal_process_reply.xml
+++ b/app/src/main/res/layout/activity_supervision_patrol_normal_process_reply.xml
@@ -22,8 +22,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_margin="16dp"
             android:paddingBottom="64dp"
+            android:divider="@drawable/divider_between_text_views"
+            android:showDividers="middle"
             android:orientation="vertical"
             android:focusable="true"
             android:focusableInTouchMode="true">
@@ -39,14 +41,22 @@
                 android:gravity="top"
                 android:inputType="textMultiLine"
                 android:scrollbars="vertical"
-                android:hint="请输入内容"
+                android:hint="请输入回复内容"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/small_cell_height"
+                android:gravity="center_vertical"
+                android:textSize="14sp"
+                android:textColor="@color/primary_text"
+                android:text="上传图片（最多9张，可选）"
                 />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 />
 
             <Button
