--- a/app/src/main/res/layout/activity_supervision_patrol_approval_process.xml
+++ b/app/src/main/res/layout/activity_supervision_patrol_approval_process.xml
@@ -45,8 +45,6 @@
                 android:layout_height="wrap_content"
                 />
 
-            <include layout="@layout/cell_separator"/>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -57,9 +55,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/small_cell_height"
                     android:gravity="center_vertical"
-                    android:textSize="14sp"
+                    android:textSize="16sp"
                     android:textColor="@color/primary_text"
-                    android:text="处理意见"
+                    android:text="处理意见："
                     />
 
                 <EditText
