--- a/app/src/main/res/layout/list_item_supervision_patrol_check_items_level2.xml
+++ b/app/src/main/res/layout/list_item_supervision_patrol_check_items_level2.xml
@@ -3,9 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:paddingStart="48dp"
-    android:textSize="16sp"
-    android:textColor="@color/secondary_text"
+    android:padding="16dp"
+    android:textSize="20sp"
+    android:textColor="@color/primary"
     android:id="@+id/textView"
     android:text="@string/default_text" />
