--- a/app/src/main/res/layout/activity_progress_check_unit_project_detail.xml
+++ b/app/src/main/res/layout/activity_progress_check_unit_project_detail.xml
@@ -19,12 +19,14 @@
         android:layout_below="@+id/title_bar"
         android:layout_alignParentBottom="true">
 
-        <org.apmem.tools.layouts.FlowLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="24dp"
-            android:layout_marginBottom="64dp"
-            android:id="@+id/flow_layout">
+            android:layout_margin="20dp"
+            android:paddingBottom="64dp"
+            android:orientation="vertical"
+            android:divider="@drawable/divider_between_text_views"
+            android:showDividers="middle">
 
             <TextView
                 android:id="@+id/project_name_text"
@@ -39,7 +41,14 @@
                 android:layout_width="match_parent"
                 android:background="@color/divider"/>
 
-        </org.apmem.tools.layouts.FlowLayout>
+            <org.apmem.tools.layouts.FlowLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/flow_layout">
+
+            </org.apmem.tools.layouts.FlowLayout>
+
+        </LinearLayout>
 
     </ScrollView>
 
