--- a/app/src/main/res/layout/activity_progress_check_component_detail.xml
+++ b/app/src/main/res/layout/activity_progress_check_component_detail.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:paddingBottom="64dp"
+            android:paddingBottom="32dp"
             android:orientation="vertical"
             android:divider="@drawable/divider_between_text_views"
             android:showDividers="middle">
@@ -63,6 +63,10 @@
 
             </org.apmem.tools.layouts.FlowLayout>
 
+            <View android:layout_height="2dp"
+                android:layout_width="match_parent"
+                android:background="@color/divider"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -84,7 +88,7 @@
                     android:layout_height="40dp"
                     android:layout_margin="8dp"
                     android:background="@color/warning"
-                    android:text="归档"
+                    android:text="完工"
                     android:id="@+id/submit_btn_2" />
 
             </LinearLayout>
