增加项目配置

--- a/app/src/main/res/layouts/layout/activity_login.xml
+++ b/app/src/main/res/layouts/layout/activity_login.xml
@@ -23,7 +23,7 @@ tools:context=".LoginActivity">
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/app_main_8002"
+        android:src="@drawable/app_login_logo"
         />
 
     <LinearLayout
