--- a/app/src/main/res/layouts/layout/activity_login.xml
+++ b/app/src/main/res/layouts/layout/activity_login.xml
@@ -11,7 +11,7 @@ tools:context=".LoginActivity">
         android:layout_height="64dp"
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text=""
+        android:text="@string/AppTitle"
         android:textSize="24sp"
         android:textColor="@android:color/white"
         android:background="@color/primary_dark"
@@ -125,7 +125,7 @@ tools:context=".LoginActivity">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text=""
+        android:text="@string/CompanyName"
         android:textSize="18dp"
         android:gravity="center"
         android:layout_above="@+id/version_text" />
