--- a/app/src/main/res/monitor/layout/fragment_data_monitor.xml
+++ b/app/src/main/res/monitor/layout/fragment_data_monitor.xml
@@ -9,18 +9,29 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="@dimen/cell_height"
-        android:gravity="center"
+        android:padding="16dp"
+        android:gravity="center_vertical"
+        android:background="@color/material_textWhite_text"
         android:id="@+id/text_view_project_name"/>
 
-    <GridView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/id_swipe_ly"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="auto_fit"
-        android:columnWidth="80dp"
-        android:stretchMode="columnWidth"
-        android:horizontalSpacing="5dp"
-        android:verticalSpacing="5dp"
-        android:id="@+id/grid_view">
-    </GridView>
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <GridView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:numColumns="auto_fit"
+            android:columnWidth="80dp"
+            android:stretchMode="columnWidth"
+            android:horizontalSpacing="5dp"
+            android:verticalSpacing="5dp"
+            android:id="@+id/grid_view">
+        </GridView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
 
 </LinearLayout>
