--- a/app/src/main/res/monitor/layout/grid_item_sensors.xml
+++ b/app/src/main/res/monitor/layout/grid_item_sensors.xml
@@ -11,9 +11,11 @@
         android:layout_height="80dp"
         android:src="@drawable/ic_sensor"
         android:tint="@color/material_orange_A700"/>
+
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
         android:textSize="18sp"
