--- a/app/src/main/res/monitor/layout/list_item_point_list_header.xml
+++ b/app/src/main/res/monitor/layout/list_item_point_list_header.xml
@@ -38,22 +38,21 @@
         />
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:textColor="@color/primary_text"
         android:gravity="center"
-        android:text="测点类型"
+        android:text="数值"
         />
 
     <TextView
-        android:layout_width="120dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:textColor="@color/primary_text"
         android:gravity="center"
-        android:text="当前值"
+        android:text="更新时间"
         />
 
 </LinearLayout>
