--- a/app/src/main/res/monitor/layout/activity_monitor_sensor_list.xml
+++ b/app/src/main/res/monitor/layout/activity_monitor_sensor_list.xml
@@ -12,6 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <com.mingle.widget.LoadingView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/loadView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        app:loadingText="加载中..."/>
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/id_swipe_ly"
         android:layout_width="match_parent"
